--- a/node-express-mongodb/package.json
+++ b/node-express-mongodb/package.json
@@ -13,7 +13,7 @@
     "api",
     "mongodb"
   ],
-  "author": "bezkoder",
+  "author": "Tetsuo",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
