--- a/node-express-mongodb/package.json
+++ b/node-express-mongodb/package.json
@@ -20,5 +20,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.9"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.2"
   }
 }
