--- a/node-express-mongodb/package.json
+++ b/node-express-mongodb/package.json
@@ -16,10 +16,12 @@
   "author": "Tetsuo",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.10.9"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.19"
   },
   "devDependencies": {
     "@types/node": "^14.14.2"
